objects/copado__Deployment_Flow_Step__c.object
<CustomObject>
    <fields>
        <fullName>copado__Automatically_Merge_and_Deploy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Merge and Deploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Flow__c</fullName>
        <label>Deployment Flow</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipLabel>Deployment Flow Steps</relationshipLabel>
        <relationshipName>Deployment_Flow_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Deployment Flow Steps (Destination Environment)</relationshipLabel>
        <relationshipName>Deployment_Flow_Steps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Source_Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Deployment Flow Steps</relationshipLabel>
        <relationshipName>Deployment_Flow_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Test_Level__c</fullName>
        <inlineHelpText>Test Level must be set to &quot;Run Local Tests&quot;</inlineHelpText>
        <label>Test Level</label>
        <picklist>
            <picklistValues>
                <fullName>No Test Run</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run Specified Tests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run Local Tests</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Run All Tests In Org</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Deployment Flow Step</label>
    <nameField>
        <displayFormat>DFS-{000000}</displayFormat>
        <label>Deployment Flow Step Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Flow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>